# zero

./: .gitignore  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md
.github/: CLA-BOT.md  cla-signatures.json
.github/workflows/: ci.yml  cla-check.yml
boot/: Cargo.toml
boot/src/: main.rs
boot/vendor-bootloader/: Cargo.toml  NOTICE  build.rs
boot/vendor-bootloader/src/: disk_image.rs  fat.rs  file_data_source.rs  gpt.rs  lib.rs  mbr.rs
boot/vendor-bootloader/src/bios/: mod.rs
boot/vendor-bootloader/src/uefi/: mod.rs
boot/vendor-bootloader/tests/: config_file.rs  default_settings.rs  fixed_kernel_address.rs  higher_half.rs  lower_memory_free.rs  lto.rs  map_phys_mem.rs  min_stack.rs  pie.rs  ramdisk.rs  stack_address.rs  write_usable_memory.rs
crates/kernel-tests/: Cargo.toml
crates/kernel-tests/src/: lib.rs
crates/kernel-tests/src/drivers/: mod.rs
crates/kernel-tests/src/net/: mod.rs
crates/quarks-arena/: Cargo.toml
crates/quarks-arena/src/: chunked.rs  config.rs  error.rs  fixed.rs  handle.rs  lib.rs
crates/quarks-arena/tests/: chunked_arena.rs  fixed_arena.rs
crates/quarks-codegen/: Cargo.toml
crates/quarks-codegen/src/: allocator.rs  assembler.rs  error.rs  frame.rs  lib.rs
crates/quarks-codegen/tests/: performance.rs
crates/quarks-frontend/: Cargo.toml
crates/quarks-frontend/src/: ast.rs  codegen.rs  lexer.rs  lib.rs  parser.rs  type_checker.rs
crates/quarks-interpreter/: Cargo.toml
crates/quarks-interpreter/src/: error.rs  frame.rs  lib.rs  machine.rs  policy.rs  symbol_table.rs  value.rs
crates/quarks-interpreter/tests/: paket_b.rs  paket_b_rest.rs  phase4.rs  property_tests.rs  property_tests_paket_b.rs  property_tests_phase4.rs
crates/quarks-lsp/: Cargo.toml
crates/quarks-lsp/src/: diagnostic_builder.rs  document_store.rs  engine.rs  lib.rs  main.rs  server.rs
crates/quarks-lsp/tests/: handlers.rs  smoke.rs
crates/quarks-validator/: Cargo.toml
crates/quarks-validator/src/: ast.rs  instructions.rs  lib.rs  parser.rs  type_checker.rs  validator.rs
crates/zero-gguf-parser/: Cargo.toml
crates/zero-gguf-parser/src/: dequant.rs  lib.rs
crates/zero-hal/: Cargo.toml
crates/zero-hal/src/: audit.rs  display.rs  error.rs  gpu.rs  lib.rs  mig.rs  mock.rs  network.rs  nvml.rs  service.rs  storage.rs  telemetry.rs  time_slice.rs
crates/zero-llm-inference/: Cargo.toml
crates/zero-llm-inference/src/: attention.rs  forward_pass.rs  kv_cache.rs  lib.rs  lm_head.rs  mla.rs  moe.rs  ops.rs
crates/zero-llm-inference/tests/: attention_reference.rs  deepseek2_moe_pipeline.rs  forward_pass_reference.rs  swiglu_reference.rs
crates/zero-llm-inference/tests/reference-dumps/: 01_normed_input.meta.txt  02_q_projected.meta.txt  03_k_projected.meta.txt  04_v_projected.meta.txt  05_q_post_qknorm.meta.txt  06_k_post_qknorm.meta.txt  07_q_post_rope.meta.txt  08_k_post_rope.meta.txt  09_attention_scores_raw.meta.txt  10_attention_weights_softmax.meta.txt  11_attention_output.meta.txt  12_final_output.meta.txt  13_2tok_attention_scores.meta.txt  14_2tok_attention_output.meta.txt  15_2tok_final_output.meta.txt  swiglu_00_mlp_input.meta.txt  swiglu_01_mlp_normed.meta.txt  swiglu_02_gate_projected.meta.txt  swiglu_03_up_projected.meta.txt  swiglu_04_silu_applied.meta.txt  swiglu_05_gate_up_product.meta.txt  swiglu_06_down_projected.meta.txt
crates/zero-nvme/: Cargo.toml
crates/zero-nvme/src/: lib.rs
docs/: ARCHITECTURE.md  PERFORMANCE.md  ROADMAP.md  SILICATEPACK.md  address-space.md  bench_artifact_README.md  benchmark_plan.md  codebase-guide.md  silicatepack-guide.md
docs/benchmarks/: qwen-smodel-benchmark-runbook.md  qwen3-1-7b-zero-vs-linux-cpu-2026-06-03.md
docs/net/: ice-e810-driver.md  network-stack.md
docs/quarks/: IR-SPEC.md
kernel/: Cargo.toml  aarch64-linker.ld  build.rs  linker.ld
kernel/.cargo/: config.toml
kernel/programs/: boot.ir
kernel/src/: aot.rs  arena_allocator.rs  bench.rs  control_plane.rs  detokenizer.rs  inference.rs  inference_avx512.rs  inference_neon.rs  kimi_vocab_README.md  llm_arena.rs  main.rs  memory.rs  model_loader.rs  rng.rs  sampler.rs  smp.rs  smp_partition.rs  weight_layout.rs
kernel/src/arch/: mod.rs
kernel/src/arch/aarch64/: boot.rs  dtb.rs  exceptions.rs  gic.rs  lfb.rs  mmu.rs  mod.rs  serial.rs  timer.rs
kernel/src/arch/aarch64/math/: linear.rs  mod.rs
kernel/src/arch/x86_64/: acpi.rs  apic.rs  cpuinfo.rs  cycles.rs  fb_console.rs  gdt.rs  interrupts.rs  iommu.rs  mod.rs  pcie.rs  pic.rs  pit.rs  serial.rs  trampoline.rs
kernel/src/arch/x86_64/math/: activation.rs  linear.rs  mod.rs  trig.rs  vnni.rs
kernel/src/drivers/: mod.rs  nvme.rs  nvme_probe.rs
kernel/src/lfb/: abi.rs  dirty_rect.rs  font.rs  font_data.rs  layer_progress.rs  mod.rs  primitives.rs  telemetry.rs  telemetry_data.rs  typewriter.rs
kernel/src/net/: arp.rs  cmds.rs  e1000.rs  eth.rs  i40e.rs  ice.rs  icmp.rs  ipv4.rs  mod.rs  shell.rs  tcp.rs  tcp_shell.rs  udp.rs
kernel/src/task/: executor.rs  futures.rs  mod.rs  oneshot.rs  queue.rs  task.rs  waker.rs
tools/: build-x86_64-baremetal.sh  encode_prompt.py  encode_prompt_kimi.py  extract_vocab.py  silicatepack.py  test_silicatepack.py  zero_acceptance.py  zero_arm_token_accuracy.py
tools/vscode-quarks/: README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
tools/vscode-quarks/src/: extension.ts
tools/vscode-quarks/syntaxes/: quarks.tmLanguage.json
tools/vscode-quarks/test-fixtures/: nested-error.qk  parse-error.qk  type-mismatch.qk  valid.qk
